mlflow_server/k8s/kompose/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml --volumes hostPath
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yml --volumes hostPath
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/backend: "true"
        io.kompose.service: db
    spec:
      containers:
        - env:
            - name: MYSQL_DATABASE
            - name: MYSQL_PASSWORD
            - name: MYSQL_ROOT_PASSWORD
            - name: MYSQL_USER
          image: mysql/mysql-server:5.7.28
          name: mlflow-db
          ports:
            - containerPort: 3306
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/mysql2
              name: db-hostpath0
      restartPolicy: Always
      volumes:
        - hostPath:
            path: /Users/lj16/code/Other/MLOps/mlflow_server/dbdata
          name: db-hostpath0
status: {}
