mlflow_server/k8s/kompose/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml --volumes hostPath
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nginx
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yml --volumes hostPath
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/frontend: "true"
        io.kompose.service: nginx
    spec:
      containers:
        - image: mlflow_nginx
          name: mlflow-nginx
          ports:
            - containerPort: 80
            - containerPort: 8002
            - containerPort: 3002
          resources: {}
      restartPolicy: Always
status: {}
