mlflow_server/k8s/kompose/registry-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml --volumes hostPath
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: registry
  name: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: registry
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yml --volumes hostPath
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/backend: "true"
        io.kompose.network/frontend: "true"
        io.kompose.service: registry
    spec:
      containers:
        - env:
            - name: REGISTRY_STORAGE
              value: s3
            - name: REGISTRY_STORAGE_REDIRECT_DISABLE
              value: "true"
            - name: REGISTRY_STORAGE_S3_ACCESSKEY
            - name: REGISTRY_STORAGE_S3_BUCKET
              value: docker-registry
            - name: REGISTRY_STORAGE_S3_REGIONENDPOINT
            - name: REGISTRY_STORAGE_S3_SECRETKEY
            - name: REGISTRY_STORAGE_S3_SECURE
              value: "false"
            - name: REGISTRY_STORAGE_S3_region
              value: ignored-for-minio
          image: registry:2
          name: registry
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
status: {}
