mlflow_server/k8s/kompose/s3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml --volumes hostPath
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: s3
  name: s3
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: s3
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yml --volumes hostPath
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/backend: "true"
        io.kompose.network/frontend: "true"
        io.kompose.service: s3
    spec:
      containers:
        - args:
            - server
            - /data
            - --address
            - :9002
          image: minio/minio:RELEASE.2021-03-17T02-33-02Z
          livenessProbe:
            exec:
              command:
                - curl
                - -f
                - http://localhost:9002/minio/health/live
            failureThreshold: 3
            periodSeconds: 30
            timeoutSeconds: 20
          name: s3
          ports:
            - containerPort: 9002
          resources: {}
          volumeMounts:
            - mountPath: /data
              name: s3-hostpath0
      restartPolicy: Always
      volumes:
        - hostPath:
            path: /Users/lj16/code/Other/MLOps/mlflow_server/data_minio
          name: s3-hostpath0
status: {}
