mlflow_server/k8s/kompose/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml --volumes hostPath
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: web
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yml --volumes hostPath
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/backend: "true"
        io.kompose.network/frontend: "true"
        io.kompose.service: web
    spec:
      containers:
        - args:
            - mlflow
            - server
            - --backend-store-uri
            - mysql+pymysql://:@db:3306/
            - --default-artifact-root
            - s3://mlflow
            - --host
            - 0.0.0.0
          image: mlflow_app
          name: mlflow-server
          ports:
            - containerPort: 5000
          resources: {}
      restartPolicy: Always
status: {}
