mlflow_server/k8s/kompose/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml --volumes hostPath
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
    - name: "8002"
      port: 8002
      targetPort: 8002
    - name: "3002"
      port: 3002
      targetPort: 3002
  selector:
    io.kompose.service: nginx
status:
  loadBalancer: {}
