mlflow_server/k8s/kompose/s3-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml --volumes hostPath
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: s3
  name: s3
spec:
  ports:
    - name: "9002"
      port: 9002
      targetPort: 9002
  selector:
    io.kompose.service: s3
status:
  loadBalancer: {}
