mlflow_server/k8s/kompose/frontend-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: frontend
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/frontend: "true"
  podSelector:
    matchLabels:
      io.kompose.network/frontend: "true"
